syntax = "proto3";

package protobuf_lib;

message ProtobufLibMessage {
    // Mock message for testing
} 