syntax = "proto3";

package import_test;

message Helper {
  int32 helper_field = 1;
} 